add more functions

--- a/templates/my-form.html
+++ b/templates/my-form.html
@@ -1,4 +1,17 @@
-<form method="POST">
-    <input name="text">
-    <input type="submit">
-</form>
+<!DOCTYPE html>
+<html lang="en" dir="ltr">
+    <head>
+        <meta charset="utf-8">
+        <title>Message</title>
+    </head>
+    <body>
+        <center><h4>Message</h4>
+        <form method="POST">
+            <input name="text">
+            <h4>to</h4><input name="to">
+            <h1><input type="submit"></h1>
+        </form>
+<img src="https://media.tenor.com/images/4653cab601012d45914782bc482a6390/tenor.gif" alt="dog">
+    </center>
+    </body>
+</html>
