changed some things up to get this to work.

--- a/templates/my-form.html
+++ b/templates/my-form.html
@@ -1,17 +1,27 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
-    <head>
-        <meta charset="utf-8">
-        <title>Message</title>
-    </head>
-    <body>
-        <center><h4>Message</h4>
-        <form method="POST">
-            <input name="text">
-            <h4>to</h4><input name="to">
-            <h1><input type="submit"></h1>
-        </form>
-<img src="https://media.tenor.com/images/4653cab601012d45914782bc482a6390/tenor.gif" alt="dog">
+
+<head>
+    <meta charset="utf-8">
+    <title>Message</title>
+</head>
+
+<body>
+    <!-- <center><h4>Message</h4> -->
+    <form method="POST">
+        <!-- <input name="message"> -->
+        <!-- <h4>Message</h4><input name="message">
+            <h4>Number</h4><input name="number">
+            <h1><input type="submit"></h1> -->
+        <h4>Message</h4>
+        <input name="msg">
+        <h4>Target Number</h4>
+        <input name="target_num">
+        <input type="submit">
+
+    </form>
+    <img src="https://media.tenor.com/images/4653cab601012d45914782bc482a6390/tenor.gif" alt="dog">
     </center>
-    </body>
+</body>
+
 </html>
